results/SVCOMP/specgen/log-exceptions18-2024_02_25_18_04_06.txt
class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ ensures (\exists A e; e != null; e == \result);
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:7: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists A e; e != null; e == \result);
                                             ^
2 errors

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ signals (A e) true;
  private static void foo() throws A {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

